--- a/resources/styles.css
+++ b/resources/styles.css
@@ -3,7 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+.body{
+  background-image: url("./State_Gifts_Presentation_Sword.jpeg");
+  background-position: center;
+}
 
 .warning{
   color: red;
