--- a/resources/styles.css
+++ b/resources/styles.css
@@ -15,6 +15,9 @@
   margin: auto;
   background-color: white;
 }
+.procedure{
+  color: #46D9E2;
+}
 
 .warning{
   color: red;
@@ -27,10 +30,24 @@
   border-radius: 10px;
   color: white;
   width: 95vw;
-  height: 85vw;
+  height: 60vh;
 }
 .btn{
   background-color: #46D9E2;
  
+
+}
+.output{
+  height: 30vh;
+  width: 65vw;
+  text-align: center;
+  border-radius: 10px;
+  color: white;
+  background-color: black;
+  position: absolute;
+  left: 15.5vw;
+  top: 16.5vh;
+  
+  
 
 }
